--- a/Readme.rdoc
+++ b/Readme.rdoc
@@ -2,6 +2,7 @@
 
 {<img src="https://coveralls.io/repos/ankit8898/days_picker/badge.png?branch=master" alt="Coverage Status" />}[https://coveralls.io/r/ankit8898/days_picker?branch=master]
 
+{<img src="https://badge.fury.io/rb/days_picker.png" alt="Gem Version" />}[http://badge.fury.io/rb/days_picker]
 
 == Days Picker
 
